Food Delivery App BE minor changes

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -74,7 +74,7 @@
         </div>
 
        <!-- Order Button -->
-        <a href="/bill" class="btn mt-auto text-2xl bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition-colors duration-300">Place Order</a>
+        <a href="cart/bill" class="btn mt-auto text-2xl bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded transition-colors duration-300">Place Order</a>
 
     </div>
 </div>
