--- a/views/createproducts.ejs
+++ b/views/createproducts.ejs
@@ -15,7 +15,7 @@
         <div class="w-[25%] flex h-screen flex-col items-start">
             <div class="flex flex-col space-y-4">
                 <a class="block text-xl text-gray-700 hover:text-blue-600 font-semibold" href="">All Products</a>
-                <a class="block text-xl text-gray-700 hover:text-blue-600 font-semibold" href="">Create New Product</a>
+                <a class="block text-xl text-blue-500 hover:text-blue-600 font-semibold" href="">Create New Product</a>
             </div>
         </div>
 
@@ -26,32 +26,32 @@
             <form autocomplete="off" action="/products/create" method="post" enctype="multipart/form-data">
                 <!-- Product Details -->
                 <div class="mb-8">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-700">Product Details</h3>
+                    <h3 class="text-2xl font-semibold mb-4 text-gray-700">Product Details</h3>
                     <div class="mb-6">
-                        <label class="block mb-2 text-lg font-medium text-gray-600">Product Image</label>
-                        <input name="image" type="file" class="py-3 px-5 border rounded-md w-full text-gray-800" value="Select File">
+                        <label class="block mb-2 text-xl font-medium text-gray-600">Product Image</label>
+                        <input name="image" type="file" class="py-3 px-5 border text-xl rounded-md w-full text-gray-800" value="Select File">
                     </div>
 
                     <div class="grid grid-cols-2 gap-6">
                         <input name="name" type="text" placeholder="Product Name"
-                            class="border p-3 rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            class="border p-3  text-xl rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <input name="price" type="text" placeholder="Product Price"
-                            class="border p-3 rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            class="border p-3  text-xl rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <input name="discount" type="text" placeholder="Discount Price"
-                            class="border p-3 rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            class="border p-3  text-xl rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                 </div>
 
                 <!-- Panel Details -->
                 <div class="mb-8">
-                    <h3 class="text-xl font-semibold mb-4 text-gray-700">Panel Details</h3>
+                    <h3 class="text-2xl font-semibold mb-4 text-gray-700">Panel Details</h3>
                     <div class="grid grid-cols-2 gap-6">
                         <input name="bgColor" type="text" placeholder="Background Color"
-                            class="border p-3 rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            class="border p-3  text-xl rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <input name="panelColor" type="text" placeholder="Panel Color"
-                            class="border p-3 rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            class="border p-3  text-xl rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <input name="textColor" type="text" placeholder="Text Color"
-                            class="border p-3 rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                            class="border p-3  text-xl rounded-md w-full text-lg text-gray-800 focus:outline-none focus:ring-2 focus:ring-blue-500">
                     </div>
                 </div>
 
